--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Angular seed project</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <style>body{padding-top:70px}</style>
+  <title>CH3: Online Auction</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   
-  <script src="node_modules/typescript/lib/typescript.js"></script>
   <script src="node_modules/core-js/client/shim.min.js"></script>
   <script src="node_modules/zone.js/dist/zone.js"></script>
+  
+  <script src="node_modules/typescript/lib/typescript.js"></script>
   <script src="node_modules/systemjs/dist/system.src.js"></script>
   <script src="systemjs.config.js"></script>
   <script>
-    System.import('app').catch(function(err){ console.error(err); });
+    System.import('app').catch(function (err) {console.error(err);});
   </script>
 </head>
 <body>
-<auction-application>Loading...</auction-application>
+<auction-application></auction-application>
 </body>
 </html>
