--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>body{padding-top:70px}</style>
-  <title>CH3: Online Auction</title>
+  <title>Angular seed project</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -19,6 +20,6 @@
   </script>
 </head>
 <body>
-<auction-application></auction-application>
+<auction-application>Loading...</auction-application>
 </body>
 </html>
